--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 
 <body>
   <h1>Todo List</h1>
-  <button id="displayTodosButton">Display Todo's</button>
-  <button id="toggleAllButton">Toggle All</button>
+ <!-- <button id='displayTodosButton'>Display Todo's</button>
+  <button id='toggleAllButton'>Toggle All</button>   OLD BUTTONS -->
   
-  
+    <button onclick="handler.displayTodos()">Display Todo's</button>
+  <button onclick="handler.toggleAll()">Toggle All</button>
   <script src="script.js"></script>
 </body>
 
